# copilosh

./: .gitignore  README.md  app.py  copilosh.sh  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  style.css
frontend/src/pages/: ChatHistory.js  Home.js
frontend/src/styles/: chathistory.css  home.css  style.css
tests/: assertion_error.sh  cd_file.sh  cd_inexistant_folder.sh  chain_of_thought.yml  comment_error.sh  create_response_dataset.py  create_test_suite.py  ls_inexistant_folder.sh  missing_import.py  missing_import.sh  pre_prompts.yml  recursion_error.sh  syntax_error_2.py  system_prompts.yml  test_models.py  unicode_error.py  variable_error.sh
tests/evaluation/: evaluation.ipynb  evaluation.py  expected_responses.yml  model_ranker.py  preprompt_ranker.py  system_prompt_ranker.py
tests/models/: slm.py
tests/test_scripts/: argument_type_error.py  argument_type_error.sh  attribute_error.py  attribute_error.sh  comment_error.py  file_not_found_error.py  file_not_found_error.sh  function_error.py  function_error.sh  indentation_error.py  indentation_error.sh  index_error.py  index_error.sh  invalid_keyword_argument.py  invalid_keyword_argument.sh  key_error.py  key_error.sh  missing_argument_error.py  missing_argument_error.sh  module_error.sh  recursion_error.py  syntax_error.py  syntax_error.sh  syntax_error_2.sh  type_error.py  type_error.sh  type_error_2.py  type_error_2.sh  unicode_error.sh  value_error.sh  variable_error.py  zero_division_error.sh
