[tool.poetry]
name = "copilosh"
version = "0.1.0"
description = ""
authors = ["Paul Guan <paul.guan@epita.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
absl-py = "2.1.0"
astunparse = "1.6.3"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
diskcache = "5.6.3"
exceptiongroup = "1.2.2"
filelock = "3.16.1"
flatbuffers = "24.3.25"
fsspec = "2024.10.0"
gast = "0.6.0"
google-pasta = "0.2.0"
grpcio = "1.68.1"
h5py = "3.12.1"
huggingface-hub = "0.26.3"
idna = "3.10"
iniconfig = "2.0.0"
Jinja2 = "3.1.4"
keras = "3.7.0"
libclang = "18.1.1"
llama-cpp-python = "0.3.2"
Markdown = "3.7"
markdown-it-py = "3.0.0"
MarkupSafe = "3.0.2"
mdurl = "0.1.2"
ml-dtypes = "0.3.2"
mpmath = "1.3.0"
namex = "0.0.8"
networkx = "3.4.2"
numpy = "1.26.4"
opt_einsum = "3.4.0"
optree = "0.13.1"
packaging = "24.2"
pip = "23.0.1"
pluggy = "1.5.0"
protobuf = "4.25.5"
Pygments = "2.18.0"
pytest = "8.3.4"
PyYAML = "6.0.2"
regex = "2024.11.6"
requests = "2.32.3"
rich = "13.9.4"
safetensors = "0.4.5"
sentencepiece = "0.2.0"
setuptools = "65.5.0"
six = "1.17.0"
sympy = "1.13.3"
tensorboard = "2.16.2"
tensorboard-data-server = "0.7.2"
tensorflow = "2.16.2"
tensorflow-io-gcs-filesystem = "0.37.1"
termcolor = "2.5.0"
tokenizers = "0.20.3"
tomli = "2.2.1"
torch = "2.2.2"
tqdm = "4.67.1"
transformers = "4.46.2"
typing_extensions = "4.12.2"
urllib3 = "2.2.3"
Werkzeug = "3.1.3"
wheel = "0.45.1"
wrapt = "1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"